Archive2/03/e49ce758519b13/output
main.cpp: In function 'int main()':
main.cpp:20:61: error: no match for call to '(ap_pair) (float&, float&)'
     mymap.insert(pair<string,ap_pair>(name, myobj(num1, num2)));
                                                             ^
